# damare

./: .gitignore  README.md  main.py  pyproject.toml  tailwind.config.js
alembic/versions/: 2025_08_18_2011-76863e16e2fd_initial_migration.py
app/: __init__.py  dependencies.py  schemas.py  service.py  stub_data.py  utils.py
app/auth/: dependencies.py  router.py  service.py
app/editor/: router.py
app/home/: router.py
app/models/: __init__.py
app/stub_proxy/: __init__.py  router.py
app/title/: dependencies.py  router.py  schemas.py
frontend_reference/: Damare-Discover-Alts.html  Damare-Hikka.html  Damare-Home-Hot.html  Damare-Home-Revised.html  Damare.html  alt-desk.jsx  alt-editorial.jsx  alt-singlework.jsx  chrome.jsx  covers.jsx  data.jsx  hikka-chrome.jsx  hikka-cover.jsx  hikka-screen-community.jsx  hikka-screen-home.jsx  hikka-screen-novel.jsx  hikka-screen-watchlist.jsx  home-mock-current.jsx  home-mock-data.jsx  home-mock-icon.jsx  home-mock-revised.jsx  icons.jsx  novel-card.jsx  screen-articles.jsx  screen-comments.jsx  screen-feed.jsx  screen-forums.jsx  screen-home.jsx  screen-login.jsx  screen-mobile.jsx  screen-novel.jsx  screen-profile.jsx  screen-reader.jsx  screen-search.jsx  screen-writer.jsx  tokens-desk.css  tokens-editorial.css  tokens-hikka.css  tokens-singlework.css  tokens.css
frontend_reference/auth/: login.html
frontend_reference/components/: cover.html  logomark.html  novel_card.html
frontend_reference/editor/: editor.html
static/: input.css  styles.css
stub/: __init__.py  build.py  loader.py
templates/: base.html
(+40 files in other folders)
