[project]
name = "damare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "arel>=0.4.0",
    "asyncpg>=0.31.0",
    "dynaconf>=3.2.13",
    "fastapi>=0.136.1",
    "greenlet>=3.4.0",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.49",
    "starlette-wtf>=0.4.5",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
